# cpp-task-service

./: .gitignore  CMakeLists.txt  README.md  mk
example-scripts/: README.md  mk-build-unit.sh  mk-clobber-init-build.sh
html/: index.html  version.js
include/: cli.hpp  precompiled.hpp  runner.hpp  tasks.hpp  unit.hpp  version.hpp
include/taskservice/: cli.hpp  logging.hpp  runner.hpp  service.hpp  taskdb.hpp  unit.hpp  version.hpp
prompts/: func2closure.txt  oss-compile-bug.txt  shared-struct.txt  shared-vector.txt
src/: cli.cpp  integration.cpp  logging.cpp  service.cpp  task-client.cpp  task-service.cpp  task-unit.cpp  taskdb.cpp  tasks.cpp  unit.cpp
